Create distinction between signing key and encryption key. Use SHA512 by default.

--- a/Transmitter/appsettings.json
+++ b/Transmitter/appsettings.json
@@ -10,9 +10,10 @@
     "Location": "archive"
   },
   "Encryption": {
-    "HashFunction": "SHA256"
+    "HashFunction": "SHA512"
   },
   "Keys": {
-    "Location": "keys"
+    "SigningKey": { "Location": "signing-keys" },
+    "EncryptionKey": { "Location": "encryption-keys" }
   }
 }
