Make key length configurable

--- a/Transmitter/appsettings.json
+++ b/Transmitter/appsettings.json
@@ -13,7 +13,13 @@
     "HashFunction": "SHA512"
   },
   "Keys": {
-    "SigningKey": { "Location": "signing-keys" },
-    "EncryptionKey": { "Location": "encryption-keys" }
+    "SigningKey": {
+      "Location": "signing-keys",
+      "KeyLength": 4096
+    },
+    "EncryptionKey": {
+      "Location": "encryption-keys",
+      "KeyLength": 4096
+    }
   }
 }
